--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>1.458</version>
+		<version>1.452</version>
 	</parent>
 
-	<groupId>jenkins.plugins.evolution</groupId>
 	<artifactId>evolution</artifactId>
-	<version>1.0</version>
 	<packaging>hpi</packaging>
+	<name>Evolution Plugin</name>
+	<version>1.0</version>
 
 	<developers>
 		<developer>
@@ -112,7 +112,7 @@
 		<dependency>
 			<groupId>org.jenkins-ci.main</groupId>
 			<artifactId>jenkins-test-harness</artifactId>
-			<version>1.458</version>
+			<version>1.452</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>slf4j-jdk14</artifactId>
