--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
 			<version>2.7.1</version>
 		</dependency>
 		<dependency>
+			<groupId>net.sourceforge.htmlcleaner</groupId>
+			<artifactId>htmlcleaner</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jenkins-ci.main</groupId>
 			<artifactId>jenkins-test-harness</artifactId>
 			<version>1.452</version>
